tests/misc/fallback_test/expected/024_crash.php.expected
src/024_crash.php:5 PhanInvalidConstantExpression Constant expression contains invalid operations
src/024_crash.php:5 PhanSyntaxError syntax error, unexpected '$notAFunction' (T_VARIABLE)
